--- a/style.css
+++ b/style.css
@@ -1,1 +1,16 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css");
+
+@font-face {
+    font-family: Space;
+    src: url(./media/fonts/SpaceMono-Regular.ttf);
+}
+body{
+    font-family: 'Space';
+}
+footer{
+    background-color: #D9BF71;
+}
+
+.blue {
+    color: blue;
+}
