--- a/style.css
+++ b/style.css
@@ -1,1 +1,25 @@
-@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css");
+@import url('https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css');
+
+.text-brand-primary {
+	color: #358c84;
+}
+
+.bg-brand-primary {
+	background-color: #358c84;
+}
+
+.text-brand-secondary {
+	color: #d9bf71;
+}
+
+.bg-brand-secondary {
+	background-color: #d9bf71;
+}
+
+.text-brand-ternary {
+	color: #97bf04;
+}
+
+.bg-brand-ternary {
+	background-color: #97bf04;
+}
