--- a/style.css
+++ b/style.css
@@ -24,19 +24,29 @@
 	background-color: #97bf04;
 }
 
+.text-shadow {
+	text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
 
 @font-face {
-    font-family: Space;
-    src: url(./media/fonts/SpaceMono-Regular.ttf);
+	font-family: Space;
+	src: url(./media/fonts/SpaceMono-Regular.ttf);
 }
-body{
-    font-family: 'Space';
+body {
+	font-family: 'Space';
 }
-footer{
-    background-color: #D9BF71;
+footer {
+	background-color: #d9bf71;
 }
 
 .blue {
-    color: blue;
+	color: blue;
 }
 
+.fs-8 {
+	font-size: 11px;
+}
+
+.fs-7 {
+	font-size: 16px;
+}
