--- a/style.css
+++ b/style.css
@@ -1,42 +1,40 @@
-@import url('https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css');
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css");
 
 .text-brand-primary {
-	color: #358c84;
+  color: #358c84;
 }
 
 .bg-brand-primary {
-	background-color: #358c84;
+  background-color: #358c84;
 }
 
 .text-brand-secondary {
-	color: #d9bf71;
+  color: #d9bf71;
 }
 
 .bg-brand-secondary {
-	background-color: #d9bf71;
+  background-color: #d9bf71;
 }
 
 .text-brand-ternary {
-	color: #97bf04;
+  color: #97bf04;
 }
 
 .bg-brand-ternary {
-	background-color: #97bf04;
+  background-color: #97bf04;
 }
-
 
 @font-face {
-    font-family: Space;
-    src: url(./media/fonts/SpaceMono-Regular.ttf);
+  font-family: Space;
+  src: url(./media/fonts/SpaceMono-Regular.ttf);
 }
-body{
-    font-family: 'Space';
+body {
+  font-family: "Space";
 }
-footer{
-    background-color: #D9BF71;
+footer {
+  background-color: #d9bf71;
 }
 
 .blue {
-    color: blue;
+  color: blue;
 }
-
