added responsive map

--- a/style.css
+++ b/style.css
@@ -33,6 +33,11 @@ footer {
 	background-color: #d9bf71;
 }
 
+.scrollButon {
+	height: 45px;
+	width: 45px;
+}
+
 /* Marker modifier */
 #main ul li::before {
 	content: '•';
@@ -94,7 +99,7 @@ footer {
 	background-image: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' stroke='black' stroke-width='4' stroke-dasharray='6%2c 14' stroke-dashoffset='0' stroke-linecap='square'/%3e%3c/svg%3e");
 }
 
-/* contact pages */
+/* contact page */
 #contact_menu {
 	height: 85vh;
 }
@@ -102,5 +107,18 @@ footer {
 #contact_links a:hover {
 	background-color: #d9bf71;
 }
-#contact_links a:focus {
+
+/* map page */
+.map-container {
+	overflow: hidden;
+	padding-bottom: 56.25%;
+	position: relative;
+	height: 0;
+}
+.map-container iframe {
+	left: 0;
+	top: 0;
+	height: 100%;
+	width: 100%;
+	position: absolute;
 }
