--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @import url('https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css');
 
-main {
+body {
 	background-color: #d7d7d7;
 }
 
@@ -11,6 +11,7 @@ main {
 
 header {
 	height: 10vh;
+	background-color: #d9bf71;
 }
 
 #burgerExpanded ul {
@@ -121,4 +122,17 @@ footer {
 	height: 100%;
 	width: 100%;
 	position: absolute;
+}
+
+@media only screen and (min-width: 992px) {
+	header {
+		background-color: #d9bf71;
+		height: auto;
+	}
+
+	#frame1,
+	#frame2,
+	#frame3 {
+		height: auto;
+	}
 }
