--- a/css/contact_ent_form.css
+++ b/css/contact_ent_form.css
@@ -1,12 +1,12 @@
 @charset "UTF-8";
-@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css");
+@import url('https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css');
 @font-face {
   font-family: Space;
   src: url(../media/fonts/SpaceMono-Regular.ttf);
 }
 body {
-  font-family: "Space";
-  background-color: #D7D7D7;
+  font-family: 'Space';
+  background-color: #d7d7d7;
 }
 
 main {
@@ -19,7 +19,7 @@ footer {
 
 /* Marker modifier */
 #main ul li::before {
-  content: "•";
+  content: '•';
   color: #358c84;
   font-size: 18px;
   font-weight: bold;
