products repsonive desktop

--- a/style.css
+++ b/style.css
@@ -173,4 +173,10 @@ footer {
   #collab {
     height: 100vh;
   }
+
+  #durabilité i,
+  #fiabilité i,
+  #energie i {
+    font-size: 100px;
+  }
 }
