--- a/style.css
+++ b/style.css
@@ -1,8 +1,11 @@
 @import url('https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css');
 
-body {
+/* body {
   background-color: #d7d7d7;
-}
+   background-size: cover;
+  background-image: url('../media/background.svg'); 
+  background-attachment: fixed;
+} */
 
 @font-face {
   font-family: Space;
@@ -24,11 +27,16 @@ header {
 
 #frame1 {
   height: 90vh;
+  /* background-color: #d7d7d7; */
+  /* opacity: .8; */
 }
 
 #frame2,
-#frame3 {
+#frame3,
+#frame4 {
   height: 100vh;
+  /* background-color: #d7d7d7;
+  opacity: .8; */
 }
 
 body {
@@ -96,7 +104,8 @@ footer {
   font-size: 16px;
 }
 
-.fs-8 {
+.fs-8,
+.fs-9 {
   font-size: 11px;
 }
 
@@ -136,7 +145,8 @@ footer {
 
   #frame1,
   #frame2,
-  #frame3 {
+  #frame3,
+  #frame4 {
     height: auto;
   }
 
@@ -149,6 +159,23 @@ footer {
   }
   h2 {
     font-size: 24px;
+  }
+
+  .fs-9 {
+    font-size: 24px;
+  }
+
+  .vh-75 {
+    height: 85vh;
+  }
+
+  .vh-90 {
+    height: 90vh;
+  }
+
+  .text-lg-uppercase {
+    text-transform: uppercase;
+    line-height: 48px;
   }
 }
 
