--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 @import url('https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css');
 
-/* body {
-  background-color: #d7d7d7;
+body {
+  /* background-color: #d7d7d7; */
    background-size: cover;
-  background-image: url('../media/background.svg'); 
+  background-image: url('../media/background.png'); 
   background-attachment: fixed;
-} */
+}
 
 @font-face {
   font-family: Space;
