enterprise contact form finished

--- a/css/contact_ent_form.css
+++ b/css/contact_ent_form.css
@@ -107,4 +107,9 @@ footer {
   display: none;
 }
 
+#red_cross {
+  width: 16px;
+  height: 16px;
+}
+
 /*# sourceMappingURL=contact_ent_form.css.map */
