--- a/style.css
+++ b/style.css
@@ -1,7 +1,20 @@
 @import url('https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css');
 
+/* settings */
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
 body {
-  /* background-color: #d7d7d7; */
+
   background-size: cover;
   background-image: url('../media/background.png');
   background-attachment: fixed;
